# mlops-customer-churn

./: README.md  churn_library.py  pyproject.toml  test_churn_library.py
models/: logistic_model.pkl
