[tool.poetry]
name = "mlops-customer-churn"
version = "0.1.0"
description = ""
authors = ["Andrea Vitali <andrea2.vitali@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.4.1.post1"
shap = "^0.44.1"
joblib = "^1.3.2"
pandas = "^2.2.1"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
pylint = "^3.1.0"
autopep8 = "^2.0.4"
pytest = "^8.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
